force-app/main/default/objects/Junction_Beat__c/Junction_Beat__c.object-meta.xml
<CustomObject>
    <label>Beat Item</label>
    <nameField>
        <displayFormat>ITEM - {0000}</displayFormat>
        <label>Beat Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>