force-app/main/default/objects/Junction_Beat__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Junction_Beats</relationshipName>
    <type>Lookup</type>
</CustomField>