force-app/main/default/objects/Junction_Beat__c/fields/Account_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Code__c</fullName>
    <formula>IF(Beat_Type__c == &apos;Primary&apos;, Account__r.SAP_Customer_Code__c , Account__r.Outlet_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Customer Code</label>
    <type>Text</type>
</CustomField>