force-app/main/default/objects/Junction_Beat__c/fields/Beat_Id__c.field-meta.xml
<CustomField>
    <fullName>Beat_Id__c</fullName>
    <formula>CASESAFEID(Child_beat__r.Beat_Id_Text__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Id</label>
    <type>Text</type>
</CustomField>