force-app/main/default/objects/Junction_Beat__c/fields/Beat_Owner_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Beat_Owner_Employee_Code__c</fullName>
    <formula>Child_beat__r.Owner_Employee_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Owner Employee Code</label>
    <type>Text</type>
</CustomField>