force-app/main/default/objects/Junction_Beat__c/fields/Beat_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Beat_OwnerId__c</fullName>
    <formula>CASESAFEID( Child_beat__r.OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat OwnerId</label>
    <type>Text</type>
</CustomField>