force-app/main/default/objects/Junction_Beat__c/fields/Beat_Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Beat_Primary_Customer__c</fullName>
    <formula>CASESAFEID(Child_beat__r.Primary_Customer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Primary Customer</label>
    <type>Text</type>
</CustomField>