force-app/main/default/objects/Junction_Beat__c/fields/Beat_Primary_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Beat_Primary_Customer_Code__c</fullName>
    <formula>Child_beat__r.Primary_Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Primary Customer Code</label>
    <type>Text</type>
</CustomField>