force-app/main/default/objects/Junction_Beat__c/fields/Beat_Sub_Stockist_Outlet_Code__c.field-meta.xml
<CustomField>
    <fullName>Beat_Sub_Stockist_Outlet_Code__c</fullName>
    <formula>Child_beat__r.Sub_Stockist_Outlet_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Sub Stockist Outlet Code</label>
    <type>Text</type>
</CustomField>