force-app/main/default/objects/Junction_Beat__c/fields/Beat_Substockiest__c.field-meta.xml
<CustomField>
    <fullName>Beat_Substockiest__c</fullName>
    <formula>CASESAFEID(Child_beat__r.Sub_Stockist__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Substockiest</label>
    <type>Text</type>
</CustomField>