force-app/main/default/objects/Junction_Beat__c/fields/Beat_Type__c.field-meta.xml
<CustomField>
    <fullName>Beat_Type__c</fullName>
    <formula>TEXT(Child_beat__r.Beat_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Type</label>
    <type>Text</type>
</CustomField>