force-app/main/default/objects/Junction_Beat__c/fields/BeatFromAccount__c.field-meta.xml
<CustomField>
    <fullName>BeatFromAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BeatFromAccount</label>
    <type>Checkbox</type>
</CustomField>