force-app/main/default/objects/Junction_Beat__c/fields/Child_beat__c.field-meta.xml
<CustomField>
    <fullName>Child_beat__c</fullName>
    <label>Beat</label>
    <referenceTo>Child_beat__c</referenceTo>
    <relationshipLabel>Beat Items</relationshipLabel>
    <relationshipName>Junction_Beats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>