force-app/main/default/objects/Junction_Beat__c/fields/Cloned_From_Customer_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From_Customer_Deactivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned From Customer Deactivation</label>
    <type>Checkbox</type>
</CustomField>