force-app/main/default/objects/Junction_Beat__c/fields/Code_Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Code_Primary_Customer__c</fullName>
    <formula>If(Account__r.SAP_Customer_Code__c != null ,Account__r.SAP_Customer_Code__c ,Account__r.Customer_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code (Primary Customer)</label>
    <type>Text</type>
</CustomField>