force-app/main/default/objects/Junction_Beat__c/fields/Customer_Active__c.field-meta.xml
<CustomField>
    <fullName>Customer_Active__c</fullName>
    <formula>IF(ISPICKVAL(Account__r.Customer_Status__c , &apos;Inactive&apos;), false, true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Active?</label>
    <type>Checkbox</type>
</CustomField>