force-app/main/default/objects/Junction_Beat__c/fields/Is_Beat_Owner_DSM_SSA__c.field-meta.xml
<CustomField>
    <fullName>Is_Beat_Owner_DSM_SSA__c</fullName>
    <formula>Child_beat__r.Owner:User.Profile.Name ==&apos;DSM&apos; ||  Child_beat__r.Owner:User.Profile.Name ==&apos;SSA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Beat Owner DSM/SSA</label>
    <type>Checkbox</type>
</CustomField>