force-app/main/default/objects/Junction_Beat__c/fields/isRepeat__c.field-meta.xml
<CustomField>
    <fullName>isRepeat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRepeat</label>
    <type>Checkbox</type>
</CustomField>