force-app/main/default/objects/Junction_Beat__c/fields/Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Manager_Id__c</fullName>
    <formula>CASESAFEID( Child_beat__r.Owner:User.ManagerId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Id</label>
    <type>Text</type>
</CustomField>