force-app/main/default/objects/Junction_Beat__c/fields/Owner_Designation__c.field-meta.xml
<CustomField>
    <fullName>Owner_Designation__c</fullName>
    <formula>Child_beat__r.Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Designation</label>
    <type>Text</type>
</CustomField>