force-app/main/default/objects/Junction_Beat__c/fields/Payroll_Employee__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Employee__c</fullName>
    <formula>Child_beat__r.Payroll_Employee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Employee?</label>
    <type>Checkbox</type>
</CustomField>