force-app/main/default/objects/Junction_Beat__c/fields/Primary_Customer_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Record_Id__c</fullName>
    <formula>CASESAFEID(Child_beat__r.Primary_Customer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Customer Record Id</label>
    <type>Text</type>
</CustomField>