force-app/main/default/objects/Junction_Beat__c/fields/Primary_Customer_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_SAP_Code__c</fullName>
    <formula>IF( TEXT(Account__r.Customer_Type__c) ==&apos;Primary Customer&apos;, Account__r.SAP_Customer_Code__c ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Customer SAP Code</label>
    <type>Text</type>
</CustomField>