force-app/main/default/objects/Junction_Beat__c/fields/Visit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Plan</label>
    <referenceTo>Beat__c</referenceTo>
    <relationshipName>Junction_Beats</relationshipName>
    <type>Lookup</type>
</CustomField>